<resources>
    <string name="app_name">کارتون آباد</string>
    <string name="home">خانه</string>
    <string name="favorite">علاقه مندی ها</string>
    <string name="downloads">دانلود شده ها</string>
    <string name="purchase">اشتراک</string>
    <string name="profile">حساب من</string>
    <string name="bookmarks">نشان شده ها</string>
    <string name="rate">رای به برنامه</string>
    <string name="share">معرفی برنامه به دوستان</string>
    <string name="contacts">ارتباط با ما</string>
    <string name="no_account">شما هیچ اشتراکی ندارید!</string>
    <string name="episodes_size">تعداد قسمت :</string>
    <string name="choose_app">برنامه ای را انتخاب کنید</string>
    <string name="empty_state_favorite">هنوز چیزی به نشان شده هات اضافه نکردی :)</string>
    <string name="empty_state_download">هنوز یه قسمتم دانلود نکردی :)</string>
    <string name="install_bazaar_app">لطفا برنامه ی کافه بازار را نصب کنید</string>
    <string name="error_in_purchase">مشکل در پرداخت</string>
    <string name="error_in_app">مشکل در برنامه</string>
    <string name="suggest_cartoon">پیشنهاد برای کارتون جدید</string>
    <string name="topic">موضوع</string>
    <string name="email">ایمیل</string>
    <string name="message_guide">لطفا متن خود را بنویسید…</string>
    <string name="send">ارسال</string>
    <string name="choose_topic">لطفا موضوع را انتخاب کنید</string>
    <string name="do_not_leave_fields_empty">لطفا فیلد را خالی نگذارید</string>
    <string name="successfully_send">پیام شما با موفقیت ارسال شد</string>
    <string name="choose_plan">انتخاب اشتراک</string>
    <string name="monthly">یک ماهه</string>
    <string name="three_month">سه ماهه</string>
    <string name="yearly">یک ساله</string>
    <string name="buy">پرداخت</string>
    <string name="already_downloaded">این قسمتو قبلا دانلود کردی !</string>
    <string name="download_status">یه قسمت در حال دانلوده ، صبر کن تا تموم شه :)</string>
    <string name="benefits_of_buy_plan">مزایای اشتراک کارتون آباد</string>
    <string name="access_to_all_animations">دسترسی به تمام کارتون ها</string>
    <string name="remove_ads">حذف شدن تمام تبلیغات</string>
    <string name="no_network">اتصال برقرار نیست !</string>
    <string name="success_purchase">اشتراک با موفقیت خریداری شد</string>
    <string name="you_have_subscription">شما در حال حاضر اشتراک دارید</string>
    <string name="you">شما</string>
    <string name="day_have_subscription">روز اشتراک دارید</string>
    <string name="unknown_error">خطای نامشخص</string>
    <string name="connection_to_bazaar_failed">اتصال به بازار برقرار نشد لطفا وارد حساب کاربری خود در بازار شوید</string>
    <string name="purchase_failed">خرید اشتراک ناموفق بود</string>
    <string name="go_to_purchase_fragment">رفتن به صفحه اشتراک ها</string>
    <string name="dialog_purchase_help_text">برای اینکه بتونی به تمام کارتون ها و قابلیت دانلود کارتون ها دسترسی پیدا کنی باید اشتراک برنامه رو بخری :)</string>
    <string name="contacts_message">قبلا پیامت رو ارسال کردی\nاز طریق ایمیلی که وارد کردی باهات در ارتباط خواهیم بود :)\nبعد از 2 روز دوباره میتونی پیام بفرستی</string>
    <string name="exit">خروج</string>
    <string name="splash_help">در حالت آفلاین \nفقط به کارتون های دانلود شده دسترسی داری</string>
    <string name="access_download">قابلیت دانلود کارتون و دیدن دانلود شده ها</string>
    <string name="no_internet_connection">اینترنت نداری!</string>
    <string name="retry">تلاش مجدد</string>
    <string name="update">آپدیت برنامه</string>
    <string name="dialog_update_help_text">سلاااااام، نسخه ی جدیدی برای برنامه منتشر کردیم.\nزود آپدیت کن که از تغییرات جا نمونی</string>
    <string name="get_new_version">دریافت نسخه جدید</string>
    <string name="online_mode_tip">برای رفتن به حالت آنلاین صفحه رو به طرف پایین بکشید</string>
    <string name="search">جستجو</string>
    <string name="search_hint">کارتون مورد نظرت رو جستجو کن</string>
    <string name="cartoons">کارتون ها</string>
    <string name="series">سریال ها</string>
    <string name="summary">خلاصه داستان</string>
    <string name="play">پخش کردن</string>
    <string name="coming_soon">به زودی ...</string>
    <string name="latest_series">جدیدترین سریال ها</string>
    <string name="genres">دسته بندی ها</string>
    <string name="see_all">بیشتر ></string>
    <string name="latest_cartoons">جدیدترین کارتون ها</string>
    <string name="popular_cartoons">پربازدیدترین کارتون ها</string>
    <string name="popular_series">پربازدیدترین سریال ها</string>
    <string name="select_season">فصل را انتخاب کنید</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="not_found">چیزی پیدا نشد !</string>

</resources>