<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_round_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/favoriteFragment"
            android:icon="@drawable/ic_favorite_white_24dp"
            android:title="@string/favorite" />
        <item
            android:id="@+id/downloadedFragment"
            android:icon="@drawable/ic_file_download_white_24dp"
            android:title="@string/downloaded" />
    </group>

    <group android:id="@+id/temp">
        <item
            android:icon="@drawable/ic_shop_white_24dp"
            android:title="@string/purchase" />
    </group>

    <group>
        <item
            android:icon="@drawable/ic_rate_white_24dp"
            android:title="@string/rate" />
        <item
            android:icon="@drawable/ic_share_white_24dp"
            android:title="@string/share" />
        <item
            android:icon="@drawable/ic_info_white_24dp"
            android:title="@string/contacts" />
    </group>

</menu>