<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_round_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/search"
        android:enabled="true"
        android:icon="@drawable/ic_round_search_24"
        android:title="@string/search" />

    <item
        android:id="@+id/download"
        android:enabled="true"
        android:icon="@drawable/ic_file_download_white_24dp"
        android:title="@string/downloaded" />

    <item
        android:id="@+id/favorite"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_white_24dp"
        android:title="@string/favorite" />

    <item
        android:id="@+id/purchase"
        android:enabled="true"
        android:icon="@drawable/ic_shop_white_24dp"
        android:title="@string/purchase" />

</menu>